Add fallback romanized pronunciation and update quick phrases